--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "stream-shield-website",
   "version": "1.0.0",
-  "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
     "nodemailer": "^6.9.11",
+    "body-parser": "^1.20.2"
   }
 }
